--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Roland Jay Ajet - Links</title>
-    <link rel="stylesheet" href="./mywebsite.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <main>
