--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Roland Jay Ajet - Links</title>
+    <meta name="viewport" content="withd=device-width, initial-scale+1" />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
